--- a/src/components/planet_view/styles/ReflectionLayer.css
+++ b/src/components/planet_view/styles/ReflectionLayer.css
@@ -1,16 +1,16 @@
 .reflection-layer {
     position: absolute;
-    width: 200%;
-    height: 200%;
-    left: -50%;
-    top: -50%;
-    opacity: 0.03;
+    width: 512px;
+    height: 512px;
+    left: 0;
+    bottom: 0;
+    opacity: 0.12;
     filter: blur(256px);
 }
 
 .reflection-color {
     background: var(--planet-color);
-    background-size: 200%;
+    background-size: 100%;
     mix-blend-mode: color;
 }
 
